Replaced socket nonsense with basic web server. Set up 3 more protocols: all_sheets(GET), saveSettings(POST), saveSheet(POST).
Fixed a bunch of random warnings and errors, changed all vars to let, and single-quotes to double-quotes.

--- a/www/index.html
+++ b/www/index.html
@@ -2,14 +2,13 @@
 <html lang="eng">
 
 <head>
-    <title>Default Character</title>
+    <title>DnD 5e Char Sheet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="css/app.css">
     <!-- Scripts -->
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="sheet/savedSheet.json"></script>
     <script type="text/javascript" src="js/extra.js"></script>
     <script type="text/javascript" src="js/changes.js"></script>
     <script type="text/javascript" src="js/add-attack.js"></script>
